<resources>
    <string name="app_name" translatable="false">DIA Stock</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ID000000">Utente</string>
    <string name="ID000001">Password</string>
    <string name="ID000002">Società</string>
    <string name="ID000003">Articolo</string>
    <string name="ID000004">Contenitore</string>
    <string name="ID000005">Unità Logistica</string>
    <string name="ID000006">Posizione</string>
    <string name="ID000007">Lotto</string>
    <string name="ID000008">Data Scadenza</string>
    <string name="ID000009">Id Variante 1</string>
    <string name="ID000010">Id Variante 2</string>
    <string name="ID000011">Id Variante 3</string>
    <string name="ID000012">Quantità</string>
    <string name="ID000013">Descrizione Articolo</string>
    <string name="ID000014">Fornitore</string>
    <string name="ID000015">Ragione Sociale Fornitore</string>
    <string name="ID000016">Numero Documento</string>
    <string name="ID000017">Posizione Partenza</string>
    <string name="ID000018">Posizione Arrivo</string>
    <string name="ID000019">Premi Enter Per I Dettagli</string>
    <string name="ID000020">Movimento Manuale</string>
    <string name="ID000021">Interrogazione Unità Logistica</string>
    <string name="ID000022">Interrogazione Articolo</string>
    <string name="ID000023">Interrogazione Contenitore</string>
    <string name="ID000024">Carico Manuale</string>
    <string name="ID000025">Scarico Manuale</string>
    <string name="ID000026">Inventario Iniziale</string>
    <string name="ID000027">Interrogazione Posizione</string>
    <string name="ID000028">Ricevimento Semplice</string>
    <string name="ID000029">Unità Logistica non mappata</string>
    <string name="ID000030">Unità Logistica già mappata</string>
    <string name="ID000031">Funzione non trovata \r \n Controllare il Menu</string>
    <string name="ID000032">Ricevimento</string>
    <string name="ID000033">Ordine/Documento/Fornitore</string>
    <string name="ID000034">Numero Ordine</string>
    <string name="ID000035">Inizio</string>
    <string name="ID000036">Prossimo</string>
    <string name="ID000037">Chiusura Ordine</string>
    <string name="ID000038">Visualizza situazione Ordine</string>
    <string name="ID000039">Quantità Richiesta</string>
    <string name="ID000040">Quantità Arrivata</string>
    <string name="ID000041">Spedizione da Ordine</string>
    <string name="ID000042">Ordine/Documento/Cliente</string>
    <string name="ID000043">Ragione Sociale Cliente</string>
    <string name="ID000044">Cliente</string>
    <string name="ID000045">Quantità Ordinata</string>
    <string name="ID000046">Quantità Prelevata</string>
    <string name="ID000047">Unità Logistica non trovata</string>
    <string name="ID000048">Premi Enter per il Prossimo</string>
    <string name="ID000049">Disponibilità Totale</string>
    <string name="ID000050">Posizioni</string>
    <string name="ID000051">Cartone</string>
    <string name="ID000052">Stoccaggio Automatico</string>
    <string name="ID000053">Posizione di stock suggerita</string>
    <string name="ID000054">Container non trovato</string>
    <string name="ID000055">Il server non ha risposto nel tempo previsto</string>
    <string name="ID000056">Codice pallet</string>
    <string name="ID000057">Data Documento</string>
    <string name="ID000058">Chiudi</string>
    <string name="ID000059">Codice EAN/UCC</string>
    <string name="ID000060">Barcode EAN/UCC Errato</string>
    <string name="ID000061">Formato Data Errato</string>
    <string name="ID000062">Magazzino Errato</string>
    <string name="ID000063">Spostamento Automatico</string>
    <string name="ID000064">Numero Lista</string>
    <string name="ID000065">Numero Lista non trovato</string>
    <string name="ID000067">La posizione è diversa. Cercare una missione?</string>
    <string name="ID000068">La posizione è diversa. Confermare?</string>
    <string name="ID000069">L\'unità Logistica è diversa . Cercare una missione?</string>
    <string name="ID000070">Il Container è diverso . Cercare una missione?</string>
    <string name="ID000071">Pallet di Destinazione</string>
    <string name="ID000072">Spedizione Automatica</string>
    <string name="ID000073">L\'Articolo è diverso . Cercare una missione?</string>
    <string name="ID000074">ID Lista</string>
    <string name="ID000075">ID Lista non trovato</string>
    <string name="ID000076">Si vuole ricevere una quantità superiore alla richiesta?</string>
    <string name="ID000077">Quantità Stoccabile in Cella</string>
    <string name="ID000078">Posizione Diversa. Confermare?</string>
    <string name="ID000079">Posizione Partenza = Posizione Arrivo</string>
    <string name="ID000080">Quantità da Ricevere</string>
    <string name="ID000081">Quantità superiore alla capacità cella. Confermare?</string>
    <string name="ID000082">Nuovo Cartone</string>
    <string name="ID000083">Tipo Imballo</string>
    <string name="ID000084">Packing</string>
    <string name="ID000085">Chiusura Cartone</string>
    <string name="ID000086">Conferma Peso</string>
    <string name="ID000087">Chiusura Lista Prelievo</string>
    <string name="ID000088">Matricola</string>
    <string name="ID000089">Si vuole prelevare una quantità superiore alla richiesta?</string>
    <string name="ID000090">Nessuna Missione Con Queste Caratteristiche</string>
    <string name="ID000091">Primo Segnacollo</string>
    <string name="ID000092">Ultimo Segnacollo</string>
    <string name="ID000093">Rettifica Prelievo</string>
    <string name="ID000094">Confermare Matricola Diversa da quella indicata dal Fornitore?</string>
    <string name="ID000095">Codice Già Letto</string>
    <string name="ID000096">Ultima Matricola</string>
    <string name="ID000097">Ultimo Lotto</string>
    <string name="ID000098">Inventario Cycle Count</string>
    <string name="ID000099">Quantità diversa. Rettificare?</string>
    <string name="ID000100">Elimina Merce Non Trovata</string>
    <string name="ID000101">Confermare eliminazione merce non trovata?</string>
    <string name="ID000102">Reso per Sostituzione</string>
    <string name="ID000103">Unità Logistica Resa</string>
    <string name="ID000104">Nuova Unità Logistica</string>
    <string name="ID000105">Matricola Resa</string>
    <string name="ID000106">Nuova Matricola</string>
    <string name="ID000107">One Shot Picking</string>
    <string name="ID000108">Confermare Prelievo Merce?</string>
    <string name="ID000109">Spostamento Merce Tra Società</string>
    <string name="ID000110">Società Destinazione</string>
    <string name="ID000111">Società Partenza = Società Destinazione</string>
    <string name="ID000112">Segnacolli Invertiti</string>
    <string name="ID000113">Spostamento A Posizione</string>
    <string name="ID000114">Scarico Box-ID</string>
    <string name="ID000115">Ordine/Documento</string>
    <string name="ID000116">Smistamento Box-ID</string>
    <string name="ID000117">Rettifica Box-ID</string>
    <string name="ID000118">Aggiungi</string>
    <string name="ID000119">Rimuovi</string>
    <string name="ID000120">Confermi Distruzione Unità Logistica</string>
    <string name="ID000121">Tipo Controllo</string>
    <string name="ID000122">Mono Destinazione</string>
    <string name="ID000123">Mono Pack-ID</string>
    <string name="ID000124">Tipo Documento</string>
    <string name="ID000125">Forza Posizione Picking</string>
    <string name="ID000126">Quantità Massima da Ricevere</string>
    <string name="ID000127">Quantità Massima da Prelevare</string>
    <string name="ID000128">Peso Lordo</string>
    <string name="ID000129">Volume</string>
    <string name="ID000130">Posizioni Suggerite</string>
    <string name="ID000131">Quantità Presente</string>
    <string name="ID000132">Stampa Etichetta Articolo/Lotto</string>
    <string name="ID000133">Matricola Opzionale</string>
    <string name="ID000134">Annullare Lettura Matricole?</string>
    <string name="ID000135">Stampa Etichetta Articolo/Lotto/Varianti</string>
    <string name="ID000136">Scambiare Lotto</string>
    <string name="ID000137">con</string>
    <string name="ID000138">Scambiare Scadenza</string>
    <string name="ID000139">Attenzione! Prodotto in scadenza da stoccare in posizione bloccata.</string>
    <string name="ID000140">Posizione di blocco per scadenza diversa. Impossibile continuare.</string>
    <string name="ID000141">Lotto Obbligatorio</string>
    <string name="ID000142">Scadenza Obbligatoria</string>
    <string name="ID000143">Riconteggio Prelievo</string>
    <string name="ID000144">Riconteggio Terminato</string>
    <string name="ID000145">Necessario Riconteggio Prelievo</string>
    <string name="ID000146">Stampa Esito Riconteggio</string>
    <string name="ID000147">Conteggio Imballi</string>
    <string name="ID000148">Necessario Conteggio Imballi</string>
    <string name="ID000149">Inventario Veloce</string>
    <string name="ID000150">Numero Segnacolli da Generare</string>
    <string name="ID000151">Modifica Pallettizzazione</string>
    <string name="ID000152">N. Pallet Standard</string>
    <string name="ID000153">N. Pallet Oversize</string>
    <string name="ID000154">Chiusura Ricevimento</string>
    <string name="ID000155">Controllo Borderaux</string>
    <string name="ID000156">Stampa Unità Logistica Da Lotto</string>
    <string name="ID000157">Scambiare Variante 1</string>
    <string name="ID000158">Inventario Veloce Dettagliato</string>
    <string name="ID000159">Posizione controllo qualità diversa. Impossibile continuare.</string>
    <string name="ID000160">Rettifica Cartone</string>
    <string name="ID000161">Codice Riserva</string>
    <string name="todo">Da fare</string>
    <string name="CloseIbound">Chiusura Ricevimento</string>
    <string name="ClosePicking">Chiusura Prelievo</string>
    <string name="PrintLabelLogunit">Stampa Etichetta Unità Logistica</string>
    <string name="title_activity_create_article">Creazione Articolo</string>
    <string name="error">Errore</string>
    <string name="existing_sku">Articolo già esistente</string>
    <string name="barcode">Codice a barre</string>
    <string name="ID000200">Nuovo codice articolo</string>
    <string name="ID000201">Nuova descrizione articolo</string>
    <string name="ID000202">Articolo non esistente! Si desidera crearlo?</string>
    <string name="access">Accedi</string>
    <string name="access_to_lightware">Accedi a Lightware</string>
    <string name="connection_error">Errore di connessione. Controllare la configurazione.</string>
    <string name="operation_successfully_completed">Operazione Completata Correttamente</string>
    <string name="causal_load">Causale carico</string>
    <string name="causal_unload">Causale scarico</string>
    <string name="warning">Attenzione</string>
    <string name="info">Informazione</string>
    <string name="ID000203">Già letto</string>
    <string name="ID000204">Scadenza da stoccare in posizione bloccata</string>
    <string name="ID000205">Pezzi</string>
    <string name="ID000206">Confermare %d pezzi ?</string>
    <string name="version_incorrect">Versione non aggiornata, scaricare dal Play Store la versione più recente</string>
    <string name="ID000207">La lunghezza minima per %s è di %d caratteri</string>
    <string name="ID000208">La lunghezza massima per %s è di %d caratteri</string>


</resources>
