<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_rect_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_alignParentTop="true"
                android:background="@drawable/login_rect_header">


                <TextView
                    android:id="@+id/textViewLoginTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:text="@string/access_to_lightware"

                    android:textColor="@color/bgContent"
                    android:textSize="24sp" />
            </LinearLayout>


            <com.diastock.app.InputArea
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_rounded_blue_border_solid"
                android:drawableLeft="@drawable/ic_action_user_dark"
                android:drawablePadding="10dp"
                android:hint="@string/ID000000"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:text="" />

            <com.diastock.app.InputArea
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_rounded_blue_border_solid"
                android:drawableLeft="@drawable/ic_action_pwd_dark"
                android:drawablePadding="10dp"
                android:hint="@string/ID000001"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:text="" />

            <com.diastock.app.InputArea
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_rounded_blue_border_solid"
                android:drawableLeft="@drawable/ic_action_user_dark"
                android:drawablePadding="10dp"
                android:hint="@string/ID000002"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:text="" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/input_rounded_orange_solid"
                android:drawableLeft="@drawable/ic_action_key"
                android:gravity="center"
                android:text="@string/access"
                android:textColor="#fff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <LinearLayout

                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/login_rect_footer"
                >

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    >
                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/headAppColor"
                        android:textAlignment="center"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:background="@drawable/language_button"
                        android:layout_weight="1"
                        android:onClick="onLangItClick"
                        android:text="IT" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/headAppColor"
                        android:background="@drawable/language_button"
                        android:layout_weight="1"
                        android:onClick="onLangEnClick"
                        android:text="EN" />

                </LinearLayout>




            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>